started html keyboard

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,18 +1,38 @@
-
-<ul id="piano" class="list-group">
-  <li data-note="C4" class="key list-group-item">C4</li>
-  <li data-note="D4" class="key list-group-item">D4</li>
-  <li data-note="E4" class="key list-group-item">E4</li>
-  <li data-note="F4" class="key list-group-item">F4</li>
-  <li data-note="G4" class="key list-group-item">G4</li>
-  <li data-note="A4" class="key list-group-item">A4</li>
-  <li data-note="B4" class="key list-group-item">B4</li>
-  <li data-note="C5" class="key list-group-item">C5</li>
-</ul>
 <select name="" id="osc">
   <option value="sine">Sine</option>
   <option value="sawtooth">Saw</option>
   <option value="triangle">Triangle</option>
   <option value="square">Square</option>
 </select>
+
+<div id="piano" class="d-flex m-3 p-3">
+  <div data-note="C4" class="key"></div>
+  <div data-note="C#4" class="Bkey"></div>
+  <div data-note="D4" class="key"></div>
+  <div data-note="D#4" class="Bkey"></div>
+  <div data-note="E4" class="key"></div>
+  <div data-note="F4" class="key"></div>
+  <div data-note="F#4" class="Bkey"></div>
+  <div data-note="G4" class="key"></div>
+  <div data-note="G#4" class="Bkey"></div>
+  <div data-note="A4" class="key"></div>
+  <div data-note="A#4" class="Bkey"></div>
+  <div data-note="B4" class="key"></div>
+  <div data-note="C5" class="key"></div>
+  <div data-note="C#5" class="Bkey"></div>
+  <div data-note="D5" class="key"></div>
+  <div data-note="D#5" class="Bkey"></div>
+  <div data-note="E5" class="key"></div>
+  <div data-note="F5" class="key"></div>
+  <div data-note="F#5" class="Bkey"></div>
+  <div data-note="G5" class="key"></div>
+  <div data-note="G#5" class="Bkey"></div>
+  <div data-note="A5" class="key"></div>
+  <div data-note="A#5" class="Bkey"></div>
+  <div data-note="B5" class="key"></div>
+  <div data-note="C6" class="key"></div>
+</div>
+
+
+
 <router-outlet></router-outlet>
