--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -7,6 +7,10 @@
     <option value="square">Pulse</option>
   </select>
 
+  <div class="oscbox">
+    <canvas id="oscilloscope"></canvas>
+  </div>
+
   <div class="slidecontainer">
     <p>Attack = <span id="attack"></span></p>
     <input type="range" min="1" max="200" value='' class="slider" id="myAttack">
