--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,29 +1,40 @@
 <div class="container">
-  <label for="osc">Carrier Oscillator</label>
-  <select name="osc" id="osc">
-    <option value="triangle">Triangle</option>
-    <option value="sine">Sine</option>
-    <option value="sawtooth">Sawtooth</option>
-    <option value="square">Pulse</option>
-  </select>
+  <div class="d-flex">
+    <div>
+      <label for="osc">Carrier Oscillator</label>
+      <select name="osc" id="osc">
+        <option value="triangle">Triangle</option>
+        <option value="sine">Sine</option>
+        <option value="sawtooth">Sawtooth</option>
+        <option value="square">Pulse</option>
+      </select>
+    </div>
 
-  <div class="oscbox">
-    <canvas id="oscilloscope"></canvas>
-  </div>
 
-  <div class="slidecontainer">
-    <p>Attack = <span id="attack"></span></p>
-    <input type="range" min="1" max="200" value='' class="slider" id="myAttack">
-    <p>Decay = <span id="decay"></span></p>
-    <input type="range" min="1" max="200" value='' class="slider" id="myDecay">
-    <p>Sustain = <span id="sustain"></span></p>
-    <input type="range" min="1" max="100" value='' class="slider" id="mySustain">
-    <p>Release = <span id="release"></span></p>
-    <input type="range" min="1" max="400" value='' class="slider" id="myRelease">
-  </div>
-  <div class="slidecontainer">
-    <p>Modulation Index = <span id="modIndex"></span></p>
-    <input type="range" min="0" max="40" value='0' class="slider" id="myModIdx">
+
+    <div class="slidecontainer">
+      <p>Attack = <span id="attack"></span></p>
+      <input type="range" min="1" max="200" value='' class="slider" id="myAttack">
+      <p>Decay = <span id="decay"></span></p>
+      <input type="range" min="1" max="200" value='' class="slider" id="myDecay">
+      <p>Sustain = <span id="sustain"></span></p>
+      <input type="range" min="1" max="100" value='' class="slider" id="mySustain">
+      <p>Release = <span id="release"></span></p>
+      <input type="range" min="1" max="400" value='' class="slider" id="myRelease">
+    </div>
+    <div class="slidecontainer">
+      <p>Modulation Index = <span id="modIndex"></span></p>
+      <input type="range" min="0" max="40" value='0' class="slider" id="myModIdx">
+    </div>
+    <div class="slidecontainer">
+      <label for="filterType">Filter Type</label>
+      <select name="filterType" id="filterType">
+        <option value="highpass">Highpass</option>
+        <option value="lowpass">Lowpass</option>
+      </select>
+      <p>Filter CutOff = <span id="fCutOff"></span></p>
+      <input type="range" min="10" max="4000" value='0' class="slider" id="myfCutOff">
+    </div>
   </div>
 
 
@@ -53,6 +64,10 @@
     <div data-note="A#5" class="Bkey"></div>
     <div data-note="B5" class="key"></div>
     <div data-note="C6" class="key"></div>
+  </div>
+
+  <div class="oscbox">
+    <canvas id="oscilloscope"></canvas>
   </div>
 
   <button class="test">test</button>
