added harmonicity slider

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -25,6 +25,8 @@
     <div class="slidecontainer">
       <p>Modulation Index = <span id="modIndex"></span></p>
       <input type="range" min="0" max="40" value='0' class="slider" id="myModIdx">
+      <p>harmonicity = <span id="harm"></span></p>
+      <input type="range" min="10" max="400" value='' class="slider" id="myHarm">
     </div>
     <div class="slidecontainer">
       <label for="filterType">Filter Type</label>
