fixed some sliders

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -18,16 +18,16 @@
       <p>Decay = <span id="decay"></span></p>
       <input type="range" min="1" max="200" value='' class="slider" id="myDecay">
       <p>Sustain = <span id="sustain"></span></p>
-      <input type="range" min="1" max="100" value='' class="slider" id="mySustain">
+      <input type="range" min="0" max="100" value='' class="slider" id="mySustain">
       <p>Release = <span id="release"></span></p>
       <input type="range" min="1" max="400" value='' class="slider" id="myRelease">
     </div>
-    <div class="slidecontainer">
+ <!--    <div class="slidecontainer">
       <p>Modulation Index = <span id="modIndex"></span></p>
       <input type="range" min="0" max="40" value='0' class="slider" id="myModIdx">
       <p>harmonicity = <span id="harm"></span></p>
       <input type="range" min="10" max="400" value='' class="slider" id="myHarm">
-    </div>
+    </div> -->
     <div class="slidecontainer">
       <label for="filterType">Filter Type</label>
       <select name="filterType" id="filterType">
