changed mousedown to mouseover for keyboard

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -72,7 +72,7 @@
     <canvas id="oscilloscope"></canvas>
   </div>
 
-  <button class="test">test</button>
+  <button class="start">start</button>
   <button class="stop">stop</button>
 
   <router-outlet></router-outlet>
