added osc select

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,12 +1,19 @@
 <div class="container">
   <div class="d-flex">
     <div>
+      <label for="type">Oscillator Type</label>
+      <select name="type" id="type">
+        <option value="">Basic</option>
+        <option value="fm">FM</option>
+        <option value="am">AM</option>
+        <option value="fat">Fat</option>
+      </select>
       <label for="osc">Carrier Oscillator</label>
       <select name="osc" id="osc">
         <option value="triangle">Triangle</option>
         <option value="sine">Sine</option>
         <option value="sawtooth">Sawtooth</option>
-        <option value="square">Pulse</option>
+        <option value="square">square</option>
       </select>
     </div>
 
