--- a/public/src/app/fat/fat.component.html
+++ b/public/src/app/fat/fat.component.html
@@ -6,7 +6,7 @@
     <option value="triangle">Triangle</option>
     <option value="sine">Sine</option>
     <option value="sawtooth">Sawtooth</option>
-    <option value="square">Pulse</option>
+    <option value="square">Square</option>
     </select>
 </p>
     
