--- a/public/src/app/pwm/pwm.component.html
+++ b/public/src/app/pwm/pwm.component.html
@@ -6,6 +6,6 @@
     <option value="triangle">Triangle</option>
     <option value="sine">Sine</option>
     <option value="sawtooth">Sawtooth</option>
-    <option value="square">Pulse</option>
+    <option value="square">Square</option>
     </select>
 </p>    
