--- a/public/src/app/pulse/pulse.component.html
+++ b/public/src/app/pulse/pulse.component.html
@@ -1,12 +1,5 @@
 <h3>PULSE</h3>
-<p class="dropdownbox">
-    <label for="osc">Carrier Oscillator</label>
-    <br/>
-    <select name="osc" id="osc">
-    <option value="triangle">Triangle</option>
-    <option value="sine">Sine</option>
-    <option value="sawtooth">Sawtooth</option>
-    <option value="square">Pulse</option>
-    </select>
-</p>
-    
+<div class="dropdownbox">
+        Width = <span id="pulsewidth"></span>
+        <input type="range" min="1" max="100" value="" class="slider" name="" id="mywidth">
+</div>
