sequencer samples added

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -89,4 +89,14 @@
         <div data-note="C6" class="key"></div>
       </div>
     </div>
+    <p><span id="bpm"></span> bpm</p>
+    <input type="range" min="60" max="240" value="120" id="bpmslider">
+    <div id="sequencer">
+        <div id="seqrow"></div>
+        <div id="seqrow"></div>
+        <div id="seqrow"></div>
+        <div id="seqrow"></div>
+    </div>
+    <button id="starter">Start</button>
+    <button id="stopper">Stop</button>
   </div>
