--- a/public/src/app/fm/fm.component.html
+++ b/public/src/app/fm/fm.component.html
@@ -6,6 +6,24 @@
     <option value="triangle">Triangle</option>
     <option value="sine">Sine</option>
     <option value="sawtooth">Sawtooth</option>
+    <option value="square" selected>Square</option>
+    </select>
+</p>    
+<p class="dropdownbox">
+    <label for="osc">Modulator Oscillator</label>
+    <br/>
+    <select name="mod" id="mod">
+    <option value="triangle">Triangle</option>
+    <option value="sine">Sine</option>
+    <option value="sawtooth">Sawtooth</option>
     <option value="square">Square</option>
     </select>
 </p>    
+<div class="dropdownbox">
+    Modulation Index = <span id="modIdx"></span>
+    <input type="range" min="0" max="200" value="" class="childslider" name="" id="myModIdx">
+</div>
+<div class="dropdownbox">
+    Harmonicity= <span id="harmony"></span>
+    <input type="range" min="1" max="100" value="" class="childslider" name="" id="myHarmony">
+</div>
