--- a/public/src/app/pwm/pwm.component.html
+++ b/public/src/app/pwm/pwm.component.html
@@ -1,11 +1,5 @@
 <h3>PWM</h3>
-<p class="dropdownbox">
-    <label for="osc">Carrier Oscillator</label>
-    <br/>
-    <select name="osc" id="osc">
-    <option value="triangle">Triangle</option>
-    <option value="sine">Sine</option>
-    <option value="sawtooth">Sawtooth</option>
-    <option value="square">Square</option>
-    </select>
-</p>    
+<div class="dropdownbox">
+    Modulation Frequncy = <span id="modFreq"></span>
+    <input type="range" min="10" max="1000" value="" class="childslider" name="" id="myModFreq">
+</div>
