--- a/public/src/app/fat/fat.component.html
+++ b/public/src/app/fat/fat.component.html
@@ -9,4 +9,12 @@
     <option value="square">Square</option>
     </select>
 </p>
+<div class="dropdownbox">
+    Spread = <span id="spread"></span>
+    <input type="range" min="2" max="100" value="" class="childslider" name="" id="mySpread">
+</div>
+<div class="dropdownbox">
+    Count = <span id="count"></span>
+    <input type="range" min="1" max="100" value="" class="childslider" name="" id="myCount">
+</div>
     
