--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -72,5 +72,22 @@
         <div data-note="B5" class="key"></div>
         <div data-note="C6" class="key"></div>
       </div>
+
+      <p><span id="bpm"></span> bpm</p>
+    <input type="range" min="60" max="240" value="120" id="bpmslider" class="">
+    <div id="sequencer">
+        <div id="seqrow"></div>
+        <div id="seqrow"></div>
+        <div id="seqrow"></div>
+        <div id="seqrow"></div>
+    </div>
+    <br>
+    <div id="tempo">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+
     </div>
   </div>
