added correct select on curves

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -39,7 +39,7 @@
         <br />
         <select name="dcyCurv" id="dcyCurve">
           <option value="linear">Linear</option>
-          <option value="exponential">Exponential</option>
+          <option value="exponential" selected>Exponential</option>
         </select>
         <br>
 
@@ -54,7 +54,7 @@
         <br />
         <select name="relCurv" id="relCurve">
             <option value="linear">Linear</option>
-            <option value="exponential">Exponential</option>
+            <option value="exponential" selected>Exponential</option>
             <option value="sine">Sine</option>
             <option value="cosine">Cosine</option>
             <option value="bounce">Bounce</option>
